# PatentPro

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/PopertyProtection_backend/: Cargo.toml  PopertyProtection_backend.did
src/PopertyProtection_backend/src/: lib.rs
src/PopertyProtection_frontend/: index.html  package.json
src/PopertyProtection_frontend/src/: App.jsx  app.css
src/PopertyProtection_frontend/src/lib/: api.js
