[package]
name = "PopertyProtection_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.7.0" # Internet Computer Development Kit
ic-cdk-macros = "0.7.0" # Macros for IC CDK
candid = "0.8.0" # Candid serialization
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON support
ic-stable-structures = "0.5.0" # Stable memory structures

[lib]
crate-type = ["cdylib"]

